[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/BG_Parallax.gd" type="Script" id=2]
[ext_resource path="res://assets/BG/bg.jpg" type="Texture" id=3]
[ext_resource path="res://assets/BG/chao.png" type="Texture" id=4]
[ext_resource path="res://assets/fonte/nokiafc22.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/spawn_pipes.gd" type="Script" id=6]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/musica/Super Mario - Som Cl√°ssico da moeda.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 265.802, 27.6925 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BG_ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 2 )
speed = 110

[node name="BG_ParallaxLayer" type="ParallaxLayer" parent="BG_ParallaxBackground"]
motion_mirroring = Vector2( 500, 0 )

[node name="bg" type="Sprite" parent="BG_ParallaxBackground/BG_ParallaxLayer"]
position = Vector2( 173.777, 365.203 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="chao_ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 2 )
speed = 250

[node name="chao_ParallaxLayer" type="ParallaxLayer" parent="chao_ParallaxBackground"]
motion_mirroring = Vector2( 354, 0 )

[node name="chao" type="Sprite" parent="chao_ParallaxBackground/chao_ParallaxLayer"]
position = Vector2( 257.216, 624.656 )
scale = Vector2( 2.08805, 1 )
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = -1.35767
margin_top = 8.14578
margin_right = 358.642
margin_bottom = 96.1458
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="limites" type="StaticBody2D" parent="."]

[node name="top" type="CollisionShape2D" parent="limites"]
position = Vector2( 176.492, -19.0069 )
shape = SubResource( 2 )

[node name="button" type="CollisionShape2D" parent="limites"]
position = Vector2( 179.207, 632.656 )
shape = SubResource( 2 )

[node name="spawn_pipes" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="spawn_pipes"]
wait_time = 1.5
autostart = true

[node name="player" parent="." instance=ExtResource( 7 )]
position = Vector2( 113.747, 568.308 )

[node name="music_game" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="music_score" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="timeout" from="spawn_pipes/Timer" to="spawn_pipes" method="_on_Timer_timeout"]
